# Proyecto_Final_POO

./: .gitignore  CMakeLists.txt  Guerrero.cpp  Guerrero.h  Mago.cpp  Mago.h  Personaje.h  main.cpp
Controller/: GameManager.cpp  GameManager.h
Model/: Arma.cpp  Arma.h  Buff.cpp  Buff.h  CollectibleItem.cpp  CollectibleItem.h  DagaVelo.cpp  DagaVelo.h  Enemigo.cpp  Enemigo.h  EspadaBruma.cpp  EspadaBruma.h  EspadaDeBruma.cpp  EspadaDeBruma.h  GuardianDeLumen.cpp  GuardianDeLumen.h  GuardianPesado.cpp  GuardianPesado.h  Inventario.cpp  Inventario.h  Iria.cpp  Iria.h  Item.cpp  Item.h  Ladron.cpp  Ladron.h  Maelor.cpp  Maelor.h  NPC.cpp  NPC.h  Personaje.cpp  Personaje.h  Player.cpp  Player.h  Pocion.cpp  Pocion.h  Sala.cpp  Sala.h  SalaB2.cpp  SalaB2.h  (+14 more)
View/: Consola.cpp  Consola.h
salas/: GameManager.h  Sala.cpp  Sala.h  SalaB2.cpp  SalaC1.cpp  SalaC1.h  SalaC2.cpp  SalaFinal.cpp  SalaFinal.h  Salab1.cpp
